<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/launcher_view_light_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/agreement_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPureBlack"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:id="@+id/agreement_sections"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>

    <CheckBox
        android:id="@+id/agreement_cb_eula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPureBlack"
        android:text="@string/agreement_ack_eula"/>

    <CheckBox
        android:id="@+id/agreement_cb_gpl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPureBlack"
        android:text="@string/agreement_ack_gpl"/>

    <CheckBox
        android:id="@+id/agreement_cb_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPureBlack"
        android:text="@string/agreement_ack_data"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/agreement_btn_reject"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/agreement_action_reject"/>

        <Button
            android:id="@+id/agreement_btn_accept"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:enabled="false"
            android:text="@string/agreement_action_accept"/>

    </LinearLayout>

</LinearLayout>
